Scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -1026,3 +1026,30 @@ input[type=button]:hover{
         font-size: 1.5rem;
     }
 }
+
+::-webkit-scrollbar{
+    width: 1rem;
+}
+
+::-webkit-scrollbar-track{
+    background: rgba(13, 13, 43, 1);
+    /* border-radius: 100vw; */
+    margin-block: 0rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background: rgba(251, 252, 254, 0.7);
+    border-radius: 80vw;
+    border: 0.25rem solid #0D0D2B;
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: rgba(251, 252, 254, 0.3);
+}
+
+@supports (scrollbar-color: rgba(13, 13, 43, 1) rgba(251, 252, 254, 0.7)){
+    *{
+        scrollbar-color: rgba(13, 13, 43, 1) rgba(251, 252, 254, 0.7);
+        scrollbar-width: auto;
+    }
+}
